# pyproduct_ca

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pyproduct_ca/: __init__.py  pyproduct_ca.py
tests/: test_pyproduct_ca.py
