[tool.poetry]
name = "pyproduct_ca"
version = "0.1.0"
description = "Calculate product of two numbers!"
authors = ["Calista Chen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
